--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   path_provider: ^2.1.5
   sqflite: ^2.4.2
   flutter_svg: ^2.2.1
+  provider: ^6.1.5+1
+  google_fonts: ^6.3.2
+  eva_icons_flutter: ^3.1.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
